# fast-cpp-csv-parser

./: .gitignore  CMakeLists.txt  benchmark.csv  bom_and_newlines.csv  columns_reorder.csv  csv-generator.cpp  lr-bench-plotter.py  lr-second-bench-plotter.py  main.cpp  quoted_strings.csv  second_bench.csv  spaces.csv  tab_separated.csv
test-src/: csv_bench.cpp  line-reader-benchmark.cpp  line-reader-first-bench.cpp  line-reader-second-bench.cpp  unit-tests.cpp
